# esi-acl-to-wanderer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  config.py  runner.py  schemas.py  state.py
app/clients/: esi.py  sso.py  wanderer.py
app/services/: mapping.py  reconciler.py
docs/: DEPLOY.md  SETUP.md
docs/superpowers/plans/: 2026-06-01-sprint1-acl-wanderer-eve-sync.md
docs/superpowers/specs/: 2026-06-01-acl-wanderer-eve-sync-design.md
docs/tasks/: task-001.md
scripts/: deploy.sh  diag.py
tests/: test_clients.py  test_mapping.py  test_reconciler.py  test_runner.py
