[project]
name = "wanderer-acl-sync"
version = "0.1.0"
description = "Sync EVE ESI Access Lists to Wanderer ACL"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42",
    "tenacity>=8.3",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
wacl-sync = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
