[project]
name = "esi-acl-to-wanderer"
version = "0.1.0"
description = "One-way sync of an EVE ESI Access List into a Wanderer ACL"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42",
    "tenacity>=8.3",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
wacl-sync = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import sorting, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]
# UP042: keep `(str, Enum)` over `StrEnum` — avoids spurious type-checker noise with pydantic.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests use fixtures/mocks with intentionally unused signature params.
"tests/*" = ["B008"]
